Fixes layout issue

--- a/app/assets/stylesheets/catarse_bootstrap/_extra.sass
+++ b/app/assets/stylesheets/catarse_bootstrap/_extra.sass
@@ -700,3 +700,5 @@ img, iframe
 
 .back-project--btn-row
   -webkit-flex: 1 0 auto
+label
+  margin-bottom: 7px
